--- a/dvdstore-web/src/main/resources/application.properties
+++ b/dvdstore-web/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 movies.file.location=C:\\temp\\movies.csv
 server.port=80
 server.servlet.context-path=/webui
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dvdstore?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Paris
+spring.datasource.username=root
+spring.datasource.password=ol34mp13
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=false
+spring.datasource.initialization-mode=always
+spring.jpa.open-in-view=false
